# NetworkVisualizer

./: .env.example  .replit  data_pipeline_api.py  package-lock.json  package.json  pyproject.toml  run_backend.sh  start_backend.py  start_backend.sh  start_pipeline_server.sh  start_redis.sh  test_alias.py  update_photos.js
attached_assets/: Pasted--Automated-Data-Pipeline-Setup-Prompt-Replit-Project-Context-We-re-creating-an-automated-data-i-1745432835268.txt  Pasted--Replit-Prompt-Finish-Harden-the-Data-Pipelines-Context-Repo-github-com-tychase-NetworkVisual-1745518799213.txt  Pasted--What-s-already-working-Layer-Status-Quick-comment-Directory-layout-backend-pipelines-api-py--1745433495485.txt  Pasted-App-Vision-Develop-a-web-application-that-visually-and-interactively-shows-connections-between-Amer-1745357285494.txt  Pasted-Below-is-a-concrete-code-oriented-checklist-that-will-take-you-from-backend-is-filling-Postgres--1745442077126.txt  Pasted-Below-is-a-turn-the-placeholders-into-reality-checklist-Follow-it-in-order-and-you-ll-see-real-me-1745443713670.txt  Pasted-Why-you-re-seeing-broken-images-Right-now-the-photo-url-you-generate-points-to-the-Congress-gov-path-1745449257760.txt
backend/: README.md  api.py  celery_app.py  celery_config.py  database.py  main.py  start.py  test_pipeline.py  utils.py
backend/pipelines/: __init__.py  congress_pipeline.py  fec_pipeline.py  stock_pipeline.py  utils.py
backend/tasks/: __init__.py  data_pipeline_tasks.py  (+1 more)
migrations/: 0000_small_nighthawk.sql
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+42 files in other folders)
